walkthroughs/eks-canary-deployments-pipeline/microservices/yelb-ui/specfiles/kubernetes.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    mesh: yelb
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
  name: yelb
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: yelb-ui
  namespace: yelb
spec:
  awsName: yelb-ui
  provider:
    virtualNode:
      virtualNodeRef:
        name: yelb-ui
---
apiVersion: v1
kind: Service
metadata:
  namespace: yelb
  name: yelb-ui-NEW
  labels:
    app: yelb-ui
    version: "NEW"
    tier: frontend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 80
  selector:
    app: yelb-ui
    version: "NEW"
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: yelb
  name: yelb-ui-NEW
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yelb-ui
      version: "NEW"
      tier: frontend
  template:
    metadata:
      labels:
        app: yelb-ui
        version: "NEW"
        tier: frontend
    spec:
      containers:
        - name: yelb-ui
          image: CONTAINER_IMAGE
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: yelb
  name: yelb-ui # used to provide a DNS entry for yelb-ui VS
spec:
  ports:
    - port: 80
      name: http
